<resources>
    <string name="app_name">GASS</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="social">Social</string>
    <string name="game">Game</string>
    <string name="createUser">Create User</string>
    <string name="logout">Logout</string>
    <string name="joinCompBtn">Join Competition</string>
    <string name="createCompBtn">Create Competition</string>
    <string name="createCompTxt">Create a competition by clicking the button below</string>
    <string name="newCompInfo" />
    <string name="joinCompTxt">Join an existing competition by writing the CompID in the field below</string>
    <string name="pushups">Pushups</string>
    <string name="pushupTimer">Time</string>
</resources>